# LatteReview

./: .env_sample  .gitignore  404.html  CHANGELOG.md  README.md  code_base.md  collect_scripts.py  index.html  objects.inv  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
LatteReviewers/: test.ipynb
LatteReviewers/agents/: reviewer_agent.py
LatteReviewers/prompts/: review_prompt.txt
LatteReviewers/providers/: base_provider.py  openai_provider.py
about/: index.html
api/agents/: index.html
api/providers/: index.html
api/workflow/: index.html
api/workflows/: index.html
installation/: index.html
lattereview/: review_workflow.py
lattereview/agents/: base_agent.py  reviewer_agent.py  scoring_reviewer.py
lattereview/generic_prompts/: review_prompt.txt
lattereview/prompts/: review_prompt.txt
lattereview/providers/: base_provider.py  litellm_provider.py  ollama_provider.py  openai_provider.py
notebooks/: data.xlsx  score_review_test.ipynb
quickstart/: index.html
search/: search_index.json
test/: data.xlsx  score_review_test.ipynb  test.ipynb
