[project]
name = "lattereview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "ipykernel>=6.29.5",
    "litellm>=1.55.2",
    "matplotlib>=3.9.4",
    "nest-asyncio>=1.6.0",
    "ollama>=0.4.4",
    "openai>=1.57.4",
    "opencv-python>=4.10.0.84",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pillow>=11.0.0",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "tokencost>=0.1.17",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39']
